--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import ThemeToggle from '../components/ThemeToggle.astro';
+import BackToTopButton from '../components/util/BackToTopButton.astro';
 import '../styles/global.css';
 
 export interface Props {
@@ -18,14 +19,20 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+    {/* Prism.js CSS (Tema 'One Dark' y 'One Light') */}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-one-dark.min.css" media="(prefers-color-scheme: dark)" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism-one-light.min.css" media="(prefers-color-scheme: light)" />
 	</head>
 	<body>
 		<ThemeToggle />
-		<main>
-			<slot />
-		</main>
+		<slot />
+    <BackToTopButton />
+    {/* Prism.js Core y Autoloader Plugin */}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/prism.min.js" integrity="sha512-UOoJElONeUNzQbbKQgE8f9wH3POrL1U5C4I5Y/tA0CLsL4g8O0h+E+G1PGGOPC3oUjVpGkP6xI/T1W+4PAgbg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/plugins/autoloader/prism-autoloader.min.js" integrity="sha512-hSAKY3Ie7bCNEg8rLdGxmS5s3cKxWJxdt+1eS9aSOygrTj/p9pQJd17XbC3R2i/bJGAa8Xl1QG/iUnFsNl7sA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	</body>
 </html>
+
 <style is:global>
 	* {
 		margin: 0;
