--- a/src/components/ui/forms/SearchInput.astro
+++ b/src/components/ui/forms/SearchInput.astro
@@ -19,7 +19,7 @@ const code = '<div class="search-container">' +
   '</div>';
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Search Input</h3>
   <p>Campo de búsqueda con sugerencias, animaciones y estados de carga.</p>
   
@@ -42,8 +42,9 @@ const code = '<div class="search-container">' +
     </div>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .search-container {
