--- a/src/components/ui/navigation/Breadcrumbs.astro
+++ b/src/components/ui/navigation/Breadcrumbs.astro
@@ -70,7 +70,7 @@ const code = `
 `;
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Breadcrumbs Navigation</h3>
   <p>Navegación de migas de pan para mostrar la ubicación actual del usuario.</p>
   
@@ -86,8 +86,9 @@ const code = `
     </nav>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .breadcrumbs {
