--- a/src/components/ui/navigation/MobileMenu.astro
+++ b/src/components/ui/navigation/MobileMenu.astro
@@ -155,7 +155,7 @@ const code = `
 `;
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Mobile Menu (Hamburger)</h3>
   <p>Menú móvil con animación de hamburguesa y navegación colapsible.</p>
   
@@ -182,8 +182,9 @@ const code = `
     </div>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .mobile-menu {
