--- a/src/components/ui/navigation/SidebarNav.astro
+++ b/src/components/ui/navigation/SidebarNav.astro
@@ -107,7 +107,7 @@ const code = `
 `;
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Sidebar Navigation</h3>
   <p>Navegación lateral con iconos, estados activos y footer de logout.</p>
   
@@ -129,8 +129,9 @@ const code = `
     </nav>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .sidebar-nav {
