--- a/src/components/ui/navigation/TabNavigation.astro
+++ b/src/components/ui/navigation/TabNavigation.astro
@@ -29,7 +29,7 @@ const code = '<div class="tab-navigation">' +
   '</div>';
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Tab Navigation</h3>
   <p>Navegación por pestañas con contenido dinámico y animaciones suaves.</p>
   
@@ -62,8 +62,9 @@ const code = '<div class="tab-navigation">' +
     </div>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .tab-navigation {
