--- a/src/components/ui/forms/RatingInput.astro
+++ b/src/components/ui/forms/RatingInput.astro
@@ -225,7 +225,7 @@ const code = `
 `;
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Rating Input</h3>
   <p>Sistema de calificación con estrellas, feedback opcional y animaciones.</p>
   
@@ -259,8 +259,9 @@ const code = `
     </div>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .rating-container {
