--- a/src/components/ui/forms/SimpleFileUpload.astro
+++ b/src/components/ui/forms/SimpleFileUpload.astro
@@ -72,7 +72,7 @@ const code = `
 `;
 ---
 
-<div class="component-demo">
+<div class="component-preview">
   <h3>Simple File Upload</h3>
   <p>Subida de archivos simple sin JavaScript complejo.</p>
   
@@ -89,8 +89,9 @@ const code = `
     </div>
   </div>
 
-  <CodeViewer code={code} lang="html" />
 </div>
+
+<CodeViewer code={code} lang="html" />
 
 <style>
   .file-upload-container {
